but 11697 bug 11691 making the service pane icons align ok + drag style for service pane visible again r=me
git-svn-id: http://publicsvn.songbirdnest.com/client/trunk@10624 5aad4ff5-4b58-4159-ba3f-0e6328df4cad

--- a/feathers/gonzo/chrome/skin/images.css
+++ b/feathers/gonzo/chrome/skin/images.css
@@ -460,9 +460,9 @@ treechildren::-moz-tree-twisty(open) {
   -moz-image-region: rect(9px, 9px, 18px, 0px) !important;
 }
 
-.servicepane-tree > treechildren::-moz-tree-twisty(closed),
-.servicepane-tree > treechildren::-moz-tree-twisty(open) {
+.servicepane-tree > treechildren::-moz-tree-twisty {
   list-style-image: url('chrome://songbird/skin/service-pane/twisty.png');
+  -moz-image-region: rect(0px, 9px, 9px, 0px);
 }
 .servicepane-tree > treechildren::-moz-tree-twisty(closed) {
   -moz-image-region: rect(0px, 9px, 9px, 0px);
